# InterviewAI-FullStack

./: .gitignore  package.json  pnpm-lock.yaml
backend/: .gitignore  main.py  package.json  pyproject.toml  requirements.txt
backend/app/src/: dict.py
backend/app/src/api/_auth/: login.py  signup.py  user.py
backend/app/src/utils/_auth/: initialize.py  jwt.py
frontend/: components.json  eslint.config.mjs  package-lock.json  package.json
frontend/src/_shared/: AuthDialog.tsx  types.ts
frontend/src/_shared/utils/: getUser.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_client-services/: ApiService.ts
frontend/src/app/_services/: ApiService.ts
frontend/src/app/_shared-components/: AnimateIn.tsx  AuthDialog.tsx  Button.tsx  Dialog.tsx  ErrorState.tsx  FeaturesSection.tsx  Footer.tsx  Navbar.tsx  PricingSection.tsx  Select.tsx
frontend/src/app/contexts/: UserContext.tsx
frontend/src/app/interview/: page.tsx
frontend/src/app/interview/Components/: Interview.tsx
frontend/src/app/job-based/: page.tsx
frontend/src/app/job-based/Components/: JobBasedComponent.tsx
frontend/src/app/session/[sessionId]/: page.tsx
frontend/src/app/skill-based/: page.tsx
frontend/src/components/: auth-dialog.tsx  features-section.tsx  footer.tsx  navbar.tsx
frontend/src/components/_shared/: AuthDialog.tsx  FeaturesSection.tsx  Navbar.tsx
frontend/src/components/ui/: Popover.tsx  dialog.tsx
frontend/src/context/: UserContext.tsx
frontend/src/lib/: getUser.ts
frontend/src/types/: index.ts
(+10 files in other folders)
